Bug 977302 - Perform automatic text track selection. r=rillian

This takes care of automatic track selection for tracks with
the default attribute specified. However, it does not take
into account any user preferences set through Firefox such
as default language.