content/media/TextTrackList.cpp
@@ -61,6 +61,12 @@ TextTrackList::IndexedGetter(uint32_t aIndex, bool& aFound)
   return aFound ? mTextTracks[aIndex] : nullptr;
 }
 
+TextTrack*
+TextTrackList::operator[](uint32_t aIndex)
+{
+  return mTextTracks.SafeElementAt(aIndex, nullptr);
+}
+
 already_AddRefed<TextTrack>
 TextTrackList::AddTextTrack(TextTrackKind aKind,
                             const nsAString& aLabel,
